sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: identifier expected but integer literal found.
    if (t[j]>t[j+1]) {
                 ^AlgBubbleSort1:13: error: ']' expected but '}' found.
  }
  ^