sort.basic.bubble.AlgBubbleSort1.scala.code


def bubbleSort()  {

for (i<-0 to lgr-2) {
change=true;
  for(j<-0 to lgr-2) {
  	if (t[j]>t[j+1]) {
  		echange(j,j+1);
  		change=false;
    }
  }
}
}